--- a/src/stylesheets/signup.module.css
+++ b/src/stylesheets/signup.module.css
@@ -1,144 +1,145 @@
-.container{
-    background-color:#fff;
-}
-.first{
+.container {
+    background-color: #fff;
+  }
+  .first {
     /* position: relative; */
   
     display: inline-block;
     width: 35%;
     overflow: hidden;
     margin-bottom: -7px;
-}
-
-.image{
+  }
+  
+  .image {
     height: 100vh;
     width: 100%;
     position: relative;
     display: flex;
-}
-
-.img{
+  }
+  
+  .img {
     width: 100%;
-}
-
-.logo{
+  }
+  
+  .logo {
     font-size: 29px;
     font-weight: 600;
     /* color: #fff; */
-}
-.image .logo{
+  }
+  .image .logo {
     position: absolute;
     margin: 0 auto;
     top: 20%;
     z-index: 999;
     text-align: center;
     width: 100%;
-}
- 
-.logo p{
+  }
+  
+  .logo p {
     color: #fff;
-}
-
-.second{
+  }
+  
+  .second {
     height: 100vh;
     /* background-color: darkseagreen; */
     display: inline-block;
     width: 65%;
     overflow: hidden;
     margin-bottom: -7px;
-}
-
-.details{
+  }
+  
+  .details {
     margin: 15% auto;
     /* background-color: chartreuse; */
     width: 60%;
     text-align: center;
     padding: 30px 0;
-}
-
-.googlebutton{
+  }
+  
+  .googlebutton {
     /* background-color: darkgreen; */
     margin: 20px 0 0 0;
-}
-
-.googlebutton > button{
-    
+  }
+  
+  .googlebutton > button {
     padding: 7px 93px;
     background-color: #fff;
     border-radius: 5px;
     border: 1px solid black;
-}
-
-.googlebutton > button:hover{
+  }
+  
+  .googlebutton > button:hover {
     padding: 7px 93px;
     background-color: #000;
     border-radius: 5px;
     border: 1px solid black;
     color: #fff;
     cursor: pointer;
-}
-
-.btn{
+  }
+  
+  .btn {
     font-size: 15px;
     font-weight: 600;
-}
-
-.form{
+  }
+  
+  .form {
     margin: 0 auto;
     /* background-color: chocolate; */
     width: 62%;
     padding: 20px 0;
-}
-
-.email{
+  }
+  
+  .email {
     padding: 0 5px;
     font-size: 10px;
     font-weight: 600;
     text-align: left;
     display: block;
-}
-
-.password{
+  }
+  
+  .password {
     padding: 0 5px;
     font-size: 10px;
     font-weight: 600;
     text-align: left;
     display: block;
-}
-input[type=text]{
+  }
+  .inputEmail {
     /* padding: 0 3px; */
     height: 30px;
     width: 100%;
     border-radius: 5px;
     outline: none;
+    padding-left: 0.5rem;
     border: 0.5px black solid;
-}
-
-input[type=password]{
+  }
+  
+  .inputPassword {
     /* padding: 0 3px; */
     height: 30px;
     width: 100%;
     border-radius: 5px;
+    padding-left: 0.5rem;
     outline: none;
     border: 0.5px black solid;
-}
-
-.section1{
+  }
+  
+  .section1 {
     margin: 20px 0;
     /* background-color: crimson; */
-}
-
-.section2{
+  }
+  
+  .section2 {
     margin: 20px 0;
     /* background-color: darkgoldenrod; */
-}
-
-.section3{
+  }
+  
+  .section3 {
     margin: 40px 0;
     /* background-color: darkslateblue; */
-}
-
-.section3 > button{
+  }
+  
+  .section3 > button {
     padding: 7px 93px;
     background-color: #000;
     border-radius: 5px;
@@ -147,25 +148,25 @@ input[type=password]{
     width: 100%;
     cursor: pointer;
     height: 40px;
-}
-
-.btn2 {
+  }
+  
+  .btn2 {
     font-size: 11px;
     font-weight: 800;
-}
-
-.restaurant{
+  }
+  
+  .restaurant {
     position: absolute;
     top: 72%;
     right: 5%;
     height: 130px;
     transform: rotate(-12deg);
-}
-
-.restaurant2{
+  }
+  
+  .restaurant2 {
     position: absolute;
     top: 5%;
     right: 50%;
     height: 130px;
     transform: rotate(40deg);
-}
+  }
