--- a/src/stylesheets/signup.module.css
+++ b/src/stylesheets/signup.module.css
@@ -54,23 +54,24 @@
     /* background-color: chartreuse; */
     width: 60%;
     text-align: center;
-    padding: 30px 0;
+    padding: 20px 0;
   }
   
   .googlebutton {
     /* background-color: darkgreen; */
-    margin: 20px 0 0 0;
+    margin: 20px 0;
   }
   
   .googlebutton > button {
-    padding: 12px 93px;
+    padding: 12px 0;
     background-color: #fff;
     border-radius: 5px;
     border: 1px solid black;
+    width: 100%;
   }
   
   .googlebutton > button:hover {
-    padding: 12px 93px;
+    padding: 12px 0;
     background-color: #000;
     border-radius: 5px;
     border: 1px solid black;
@@ -83,11 +84,11 @@
     padding: 0 6px 0 0;
     /* background-color: aqua; */
     position: inherit;
-    font-size: 12px;
+    font-size: 11px;
   }
 
   .btn {
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 600;
   }
   
@@ -95,7 +96,14 @@
     margin: 0 auto;
     /* background-color: chocolate; */
     width: 65%;
-    padding: 20px 0;
+  }
+
+  .name {
+    padding: 0 5px;
+    font-size: 10px;
+    font-weight: 600;
+    text-align: left;
+    display: block;
   }
   
   .email {
@@ -113,6 +121,25 @@
     text-align: left;
     display: block;
   }
+
+  .confirmPassword {
+    padding: 0 5px;
+    font-size: 10px;
+    font-weight: 600;
+    text-align: left;
+    display: block;
+  }
+
+  .inputName {
+    /* padding: 0 3px; */
+    height: 40px;
+    width: 97%;
+    border-radius: 5px;
+    outline: none;
+    padding-left: 0.5rem;
+    border: 0.5px black solid;
+  }
+
   .inputEmail {
     /* padding: 0 3px; */
     height: 40px;
@@ -132,23 +159,42 @@
     outline: none;
     border: 0.5px black solid;
   }
-  
+
+  .inputConfirmPassword {
+    /* padding: 0 3px; */
+    height: 40px;
+    width: 97%;
+    border-radius: 5px;
+    padding-left: 0.5rem;
+    outline: none;
+    border: 0.5px black solid;
+  }
+
+  .section0 {
+    margin: 5px 0;
+    /* background-color: orange; */
+  }
+
   .section1 {
-    margin: 20px 0;
+    margin: 5px 0;
     /* background-color: crimson; */
   }
   
   .section2 {
-    margin: 20px 0;
+    margin: 5px 0;
     /* background-color: darkgoldenrod; */
   }
-  
   .section3 {
-    margin: 40px 0;
+    margin: 5px 0;
+    /* background-color: yellow; */
+  }
+  
+  .section4 {
+    margin: 20px 0;
     /* background-color: darkslateblue; */
   }
   
-  .section3 > button {
+  .section4 > button {
     background-color: #000;
     border-radius: 5px;
     border: 1px solid black;
@@ -177,4 +223,370 @@
     right: 50%;
     height: 130px;
     transform: rotate(40deg);
+  }
+
+  @media (min-width: 2000px) and (max-width: 3000px) {
+    .form {
+        width: 65%;
+      }
+      .section0 {
+        margin: 20px 0;
+      }
+    
+      .section1 {
+        margin: 20px 0;
+      }
+      
+      .section2 {
+        margin: 20px 0;
+      }
+      .section3 {
+        margin: 20px 0;
+      }
+      
+      .section4 {
+        margin: 20px 0;
+      }  
+      .details {
+        margin: 25% auto;
+        width: 60%;
+        text-align: center;
+        padding: 20px 0;
+      }
+      .name {
+        padding: 0 5px;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: left;
+        display: block;
+      }
+      
+      .email {
+        padding: 0 5px;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: left;
+        display: block;
+      }
+      
+      .password {
+        padding: 0 5px;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: left;
+        display: block;
+      }
+    
+      .confirmPassword {
+        padding: 0 5px;
+        font-size: 20px;
+        font-weight: 600;
+        text-align: left;
+        display: block;
+      }
+    
+      .inputName {
+        /* padding: 0 3px; */
+        font-size: 20px;
+        height: 60px;
+        width: 97%;
+        border-radius: 5px;
+        outline: none;
+        padding-left: 0.5rem;
+        border: 0.5px black solid;
+      }
+    
+      .inputEmail {
+        /* padding: 0 3px; */
+        font-size: 20px;
+        height: 60px;
+        width: 97%;
+        border-radius: 5px;
+        outline: none;
+        padding-left: 0.5rem;
+        border: 0.5px black solid;
+      }
+      
+      .inputPassword {
+        /* padding: 0 3px; */
+        font-size: 20px;
+        height: 60px;
+        width: 97%;
+        border-radius: 5px;
+        padding-left: 0.5rem;
+        outline: none;
+        border: 0.5px black solid;
+      }
+    
+      .inputConfirmPassword {
+        /* padding: 0 3px; */
+        font-size: 20px;
+        height: 60px;
+        width: 97%;
+        border-radius: 5px;
+        padding-left: 0.5rem;
+        outline: none;
+        border: 0.5px black solid;
+      }
+
+      .section4 > button {
+        background-color: #000;
+        border-radius: 5px;
+        border: 1px solid black;
+        color: #fff;
+        width: 100%;
+        cursor: pointer;
+        height: 60px;
+      }
+      
+      .btn2 {
+        font-size: 13px;
+        font-weight: 600;
+      }
+    
+  }
+
+  @media (min-width: 1400px) and (max-width: 2000px) {
+    .details {
+        margin: 15% auto;
+        width: 60%;
+        text-align: center;
+        padding: 20px 0;
+      }
+  }
+
+  @media (min-width: 960px) and (max-width: 1400px) {
+    .details {
+        margin: 15% auto;
+        width: 60%;
+      }
+
+      .btn {
+        font-size: 14px;
+        font-weight: 600;
+      }
+      .FaGoogle{
+        display: inline-block;
+        padding: 0 6px 0 0;
+        position: inherit;
+        font-size: 10px;
+      }
+
+      .form {
+        width: 80%;
+      }
+
+      .inputName {
+        font-size: 12px;
+      }
+    
+      .inputEmail {
+        font-size: 12px;
+      }
+      
+      .inputPassword {
+        font-size: 12px;
+      }
+    
+      .inputConfirmPassword {
+        font-size: 12px;
+      }
+      .restaurant {
+        position: absolute;
+        top: 85%;
+        right: 4%;
+        height: 80px;
+        transform: rotate(-12deg);
+      }
+      
+      .restaurant2 {
+        position: absolute;
+        top: 12%;
+        right: 54%;
+        height: 80px;
+        transform: rotate(40deg);
+      }
+  }
+
+  @media (min-width: 750px) and (max-width: 960px) {
+    .details {
+        margin: 20% auto;
+        width: 75%;
+      }
+    
+    .form {
+        width: 90%;
+      }
+
+      .restaurant {
+        top: 85%;
+        right: 4%;
+        height: 80px;
+      }
+      
+      .restaurant2 {
+        top: 12%;
+        right: 54%;
+        height: 80px;
+      }
+  }
+
+  @media (min-width: 500px) and (max-width: 750px) {
+    .googlebutton {
+        /* background-color: darkgreen; */
+        margin: 9px 0;
+      }  
+    .FaGoogle{
+        font-size: 9px;
+      }
+    
+      .btn {
+        font-size: 11px;
+      }
+      .details {
+        width: 85%;
+        margin: 22% auto;
+      }
+      .restaurant {
+        top: 85%;
+        right: 4%;
+        height: 60px;
+      }
+      
+      .restaurant2 {
+        top: 10%;
+        right: 54%;
+        height: 60px;
+      }
+
+      .logo {
+        font-size: 20px;
+      }
+      .inputName {
+        font-size: 10px;
+      }
+    
+      .inputEmail {
+        font-size: 10px;
+      }
+      
+      .inputPassword {
+        font-size: 10px;
+      }
+    
+      .inputConfirmPassword {
+        font-size: 10px;
+      }
+  }
+
+  @media (min-width: 300px) and (max-width: 500px) {
+
+    .img {
+        width: 100%;
+        height: 30%;
+      }
+
+    .first {
+        display: inline-block;
+        width: 100%;
+        overflow: hidden;
+        margin-bottom: -7px;
+        height: 40vh;
+      }
+      .second {
+        /* height: 100vh; */
+        display: inline-block;
+        width: 100%;
+        overflow: hidden;
+        /* margin-bottom: -7px; */
+      }  
+      .image {
+        height: 100%;
+        width: 100%;
+        position: relative;
+        display: flex;
+      }  
+    .img {
+        width: 100%;
+        height: 100%;
+      }
+
+      .details {
+        margin: 5% auto;
+        width: 80%;
+        text-align: center;
+      }
+    
+    .logo {
+        font-size: 13px;
+      }
+
+      .googlebutton {
+        /* background-color: darkgreen; */
+        margin: 5px 0;
+      }  
+    
+      .restaurant {
+        top: 85%;
+        right: 4%;
+        height: 40px;
+      }
+      
+      .restaurant2 {
+        top: 45%;
+        right: 80%;
+        height: 40px;
+      }
+      .FaGoogle{
+        font-size: 6px;
+      }
+    
+      .btn {
+        width: 100%;  
+        font-size: 8px;
+      }
+
+      .h5{
+        font-size: 11px;
+      }
+      .inputName {
+        font-size: 10px;
+        height: 20px;
+        width: 95%;
+      }
+    
+      .inputEmail {
+        font-size: 10px;
+        height: 20px;
+        width: 95%;
+      }
+      
+      .inputPassword {
+        font-size: 10px;
+        height: 20px;
+        width: 95%;
+      }
+    
+      .inputConfirmPassword {
+        font-size: 10px;
+        height: 20px;
+        width: 95%;
+      }
+      .googlebutton > button {
+        padding: 7px 0;
+        background-color: #fff;
+        border-radius: 5px;
+        border: 1px solid black;
+        width: 100%;
+      }
+      
+      .googlebutton > button:hover {
+        padding: 7px 0;
+        background-color: #000;
+        border-radius: 5px;
+        border: 1px solid black;
+        color: #fff;
+        cursor: pointer;
+      }
+      
   }
